# auto-trade

./: .gitignore  README.md  README.zh-CN.md
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: deps.py  response.py
apps/api/app/api/routes/: __init__.py  auth.py  compat.py  events.py  health.py  intake.py  logs.py  settings.py
apps/api/app/core/: config.py  context.py  errors.py  idempotency.py  logging.py  rate_limit.py  security.py  session.py
apps/api/app/db/: session.py
apps/api/app/db/migrations/: README.md
apps/api/app/db/models/: __init__.py  auth_session.py  channel.py  channel_source.py  message_version.py  normalized_message.py  operator_action.py  raw_message.py  runtime_setting.py  source_cursor.py  system_log.py
apps/api/app/db/repositories/: __init__.py  audit_repository.py  auth_repository.py  intake_repository.py  logs_repository.py  settings_repository.py
apps/api/app/realtime/: sse_hub.py
apps/api/app/schemas/: auth.py  common.py  events.py  logs.py  settings.py
apps/api/app/services/: auth_service.py  events_service.py  intake_scheduler.py  intake_service.py  logs_service.py  settings_service.py  telegram_intake_parser.py  telegram_page_fetcher.py
apps/api/auto_trade_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/integration/: test_phase2_foundation.py  test_phase2_manual_remaining.py  test_phase3_intake_basic.py  test_phase3_manual_checks_auto.py  test_sse_heartbeat_contract.py
apps/api/tests/unit/: test_intake_parser.py  test_security.py  test_session_helpers.py
(+73 files in other folders)
